--- a/index.html
+++ b/index.html
@@ -5,11 +5,52 @@
     <title>Apple Web Site</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
-  <body>
+  <body class="home">
   	<div class="main">
-  		<header>
-	  		
-	  	</header>
+  	<nav id="globalheader">
+	  	<ul id="globalnav">
+	  		<li id="applelogo">
+	  		 	<a href="http://www.apple.com/">
+	  		 		<span>Apple</span>
+	  		 	</a>
+	  		</li>		
+	  		<li id="store">
+	  			<a href="#">
+	  		 		<span>Store</span>
+	  		 	</a>
+	  		 </li>
+	  		<li id="mac">
+	  			<a href="#">
+	  		 		<span>Mac</span>
+	  		 	</a>
+	  		 </li>
+	  		<li id="ipod">
+	  			<a href="#">
+	  		 		<span>iPod</span>
+	  		 	</a>
+	  		 </li>
+	  		<li id="iphone">
+	  			<a href="#">
+	  		 		<span>iPhone</span>
+	  		 	</a>
+	  		 </li>
+	  		<li id="ipad">
+	  			<a href="#">
+	  		 		<span>iPad</span>
+	  		 	</a>
+	  		 </li>
+	  		<li id="itunes">
+	  			<a href="#/">
+	  		 		<span>iTunes</span>
+	  		 	</a>
+	  		 </li>
+	  		<li id="support">
+	  			<a href="#">
+	  		 		<span>Support</span>
+	  		 	</a>
+	  		 </li>
+	  	</ul>	
+	 </nav>	
 	  		
 	</div>  	
   </body>
